// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`smoke: full scripted-run rendering contract > locks the frame at narrow width (44 columns) 1`] = `
"╭─ Sherlock — evidence collection agent ─╮
│             Welcome back!              │
│                                        │
│              .-~~~~~~~~~~-.            │
│             / . , .  . , . \\           │
│            ;   ___    ___   ;          │
│            |  '   '~~'   '  |          │
│            | .-~~~-..-~~~-. |          │
│           |  (( ◉ ))(( ◉ ))  |         │
│            ; '-___-''-___-' ;          │
│            \\  '-. \\  / .-'  /          │
│         ,__  \\  '~~\\/~~'  /  __,       │
│         \\   '-.   ░░░░   .-'   /       │
│          \\     \\ ░▒▒▒▒░ /     /        │
│           \\     ;░▒▒▒▒░;     /         │
│            \\    |▒▒▓▓▒▒|    /          │
│             '~~~|      |~~~'           │
╰────────────────────────────────────────╯


 ▸ Find Acme Corp's Series B investors and
 save them to a CSV

  I'll start with recent funding coverage,
  then confirm the names against the primary
   filing.

 ● Running a browser program  ✓

  The coverage is up. Reading the page for
  investor names and capturing the article
  as evidence.

 ● Running a browser program  ✓

 ◆ Publishing a screenshot →
 artifacts/series-b-coverage.png
   └ source: https://techcrunch.com/2026/05/
 14/acme-series-b

  The article names three investors —
  Meridian Growth, Halcyon Partners, and
  Northgate Capital. The filing should
  confirm the amounts.

 ● Running a browser program  ✓

 ● Running a browser program  ✗

  The link moved after the page settled —
  re-inspecting, then capturing the filing
  and saving the confirmed list as evidence.

 ● Running a browser program  ✓

 ◆ Publishing a screenshot →
 artifacts/form-d-filing.png
   └ source: https://www.sec.gov/Archives/ed
 gar/data/1874523/primary_doc.xml

 ◆ Publishing an artifact →
 artifacts/investors.csv

  Acme's Series B was led by Meridian Growth
   with participation from Halcyon Partners
  and Northgate Capital; the three names and
   their filing references are saved in
  investors.csv.

 ● Submitting for verification  ✓

 ✓ Brewed in 42s · 18.7k tokens
   ◆ artifacts/investors.csv · 182 B ·
 requested output
   ◆ artifacts/series-b-coverage.png · 82.5
 KB · evidence
   ◆ artifacts/form-d-filing.png · 59.8 KB ·
  evidence
   runs/2026-08-11_10-15-02_find-acme-corp-s
 eries-b_demo

 ✓ Brewed in 42s · 18.7k tokens
   runs/2026-08-11_10-15-02_find-acme-corp-s
 eries-b_demo
   Series B: $85M led by Meridian Growth,
   with Halcyon Partners and Northgate
   Capital — confirmed against the Form D
   and saved to investors.csv.

   ◆ artifacts/investors.csv  182 B
   ◆ artifacts/series-b-coverage.png  82.5
 KB
   ◆ artifacts/form-d-filing.png  59.8 KB
   tab to browse artifacts
╭──────────────────────────────────────────╮
│ ›                                        │
╰──────────────────────────────────────────╯"
`;

exports[`smoke: full scripted-run rendering contract > locks the frame at normal width (80 columns) 1`] = `
"╭─ Sherlock — evidence collection agent ───────────────────────╮
│                        Welcome back!                         │
│                                                              │
│                         .-~~~~~~~~~~-.                       │
│                        / . , .  . , . \\                      │
│                       ;   ___    ___   ;                     │
│                       |  '   '~~'   '  |                     │
│                       | .-~~~-..-~~~-. |                     │
│                      |  (( ◉ ))(( ◉ ))  |                    │
│                       ; '-___-''-___-' ;                     │
│                       \\  '-. \\  / .-'  /                     │
│                    ,__  \\  '~~\\/~~'  /  __,                  │
│                    \\   '-.   ░░░░   .-'   /                  │
│                     \\     \\ ░▒▒▒▒░ /     /                   │
│                      \\     ;░▒▒▒▒░;     /                    │
│                       \\    |▒▒▓▓▒▒|    /                     │
│                        '~~~|      |~~~'                      │
╰──────────────────────────────────────────────────────────────╯


 ▸ Find Acme Corp's Series B investors and save them to a CSV

  I'll start with recent funding coverage, then confirm the names against the
  primary filing.

 ● Running a browser program  ✓

  The coverage is up. Reading the page for investor names and capturing the
  article as evidence.

 ● Running a browser program  ✓

 ◆ Publishing a screenshot → artifacts/series-b-coverage.png
   └ source: https://techcrunch.com/2026/05/14/acme-series-b

  The article names three investors — Meridian Growth, Halcyon Partners, and
  Northgate Capital. The filing should confirm the amounts.

 ● Running a browser program  ✓

 ● Running a browser program  ✗

  The link moved after the page settled — re-inspecting, then capturing the
  filing and saving the confirmed list as evidence.

 ● Running a browser program  ✓

 ◆ Publishing a screenshot → artifacts/form-d-filing.png
   └ source: https://www.sec.gov/Archives/edgar/data/1874523/primary_doc.xml

 ◆ Publishing an artifact → artifacts/investors.csv

  Acme's Series B was led by Meridian Growth with participation from Halcyon
  Partners and Northgate Capital; the three names and their filing references
  are saved in investors.csv.

 ● Submitting for verification  ✓

 ✓ Brewed in 42s · 18.7k tokens
   ◆ artifacts/investors.csv · 182 B · requested output
   ◆ artifacts/series-b-coverage.png · 82.5 KB · evidence
   ◆ artifacts/form-d-filing.png · 59.8 KB · evidence
   runs/2026-08-11_10-15-02_find-acme-corp-series-b_demo

 ✓ Brewed in 42s · 18.7k tokens
   runs/2026-08-11_10-15-02_find-acme-corp-series-b_demo
   Series B: $85M led by Meridian Growth, with Halcyon Partners and Northgate
   Capital — confirmed against the Form D and saved to investors.csv.

   ◆ artifacts/investors.csv  182 B
   ◆ artifacts/series-b-coverage.png  82.5 KB
   ◆ artifacts/form-d-filing.png  59.8 KB
   tab to browse artifacts
╭──────────────────────────────────────────────────────────────────────────────╮
│ ›                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`smoke: full scripted-run rendering contract > locks the waiting composer state 1`] = `
"╭─ Sherlock — evidence collection agent ───────────────────────╮
│                        Welcome back!                         │
│                                                              │
│                         .-~~~~~~~~~~-.                       │
│                        / . , .  . , . \\                      │
│                       ;   ___    ___   ;                     │
│                       |  '   '~~'   '  |                     │
│                       | .-~~~-..-~~~-. |                     │
│                      |  (( ◉ ))(( ◉ ))  |                    │
│                       ; '-___-''-___-' ;                     │
│                       \\  '-. \\  / .-'  /                     │
│                    ,__  \\  '~~\\/~~'  /  __,                  │
│                    \\   '-.   ░░░░   .-'   /                  │
│                     \\     \\ ░▒▒▒▒░ /     /                   │
│                      \\     ;░▒▒▒▒░;     /                    │
│                       \\    |▒▒▓▓▒▒|    /                     │
│                        '~~~|      |~~~'                      │
╰──────────────────────────────────────────────────────────────╯


 ▸ Find Acme Corp's Series B investors and save them to a CSV

  I'll start with recent funding coverage, then confirm the names against the
  primary filing.

 ● Running a browser program  ✓

  The coverage is up. Reading the page for investor names and capturing the
  article as evidence.

 ● Running a browser program  ✓

 ◆ Publishing a screenshot → artifacts/series-b-coverage.png
   └ source: https://techcrunch.com/2026/05/14/acme-series-b

  The article names three investors — Meridian Growth, Halcyon Partners, and
  Northgate Capital. The filing should confirm the amounts.

 ● Running a browser program  ✓

 ● Running a browser program  ✗

  The link moved after the page settled — re-inspecting, then capturing the
  filing and saving the confirmed list as evidence.

 ● Running a browser program  ✓

 ◆ Publishing a screenshot → artifacts/form-d-filing.png
   └ source: https://www.sec.gov/Archives/edgar/data/1874523/primary_doc.xml

 ◆ Publishing an artifact → artifacts/investors.csv

  Acme's Series B was led by Meridian Growth with participation from Halcyon
  Partners and Northgate Capital; the three names and their filing references
  are saved in investors.csv.

 ● Submitting for verification  ✓

 ✓ Brewed in 42s · 18.7k tokens
   ◆ artifacts/investors.csv · 182 B · requested output
   ◆ artifacts/series-b-coverage.png · 82.5 KB · evidence
   ◆ artifacts/form-d-filing.png · 59.8 KB · evidence
   runs/2026-08-11_10-15-02_find-acme-corp-series-b_demo
╭──────────────────────────────────────────────────────────────────────────────╮
│ › (waiting for agent…)                                                       │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;
